feature: [172] Remove unnecessary changes